[package]
name = "monojiten"
version = "0.1.1"
edition = "2024"
description = "Monolingual Japanese dictionary CLI"
license = "MIT"
repository = "https://github.com/coleshanks/monojiten"
keywords = ["japanese", "dictionary", "cli", "yomitan", "monolingual"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = "8.5.0"
